objects/DMAPP__DM_Dated_User_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__ClosedProjected__c</fullName>
        <formula>DMAPP__Won__c +  DMAPP__Projected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClosedProjected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Dated_Forecast_Report__c</fullName>
        <label>DM Dated Forecast Report</label>
        <referenceTo>DMAPP__DM_Dated_Forecast_Report__c</referenceTo>
        <relationshipLabel>DM Dated User Forecasts</relationshipLabel>
        <relationshipName>DM_Dated_User_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Lineage__c</fullName>
        <label>Lineage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Lost__c</fullName>
        <label>Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__MonthClosed__c</fullName>
        <label>MonthClosed</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__NodeName__c</fullName>
        <label>NodeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Open__c</fullName>
        <formula>DMAPP__Projected__c +  DMAPP__Unprojected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__ParentId__c</fullName>
        <label>ParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__PebbleAmount__c</fullName>
        <label>Pebble Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Pebble_Percentage__c</fullName>
        <label>Pebble Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Projected__c</fullName>
        <label>Projected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__RockAmount__c</fullName>
        <label>Rock Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rock_Percentage__c</fullName>
        <label>Rock Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__StoneAmount__c</fullName>
        <label>Stone Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Total__c</fullName>
        <formula>DMAPP__Won__c +  DMAPP__Unprojected__c  +  DMAPP__Projected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Unprojected__c</fullName>
        <label>Unprojected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__UserRoleId__c</fullName>
        <label>UserRoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DM_Dated_User_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Won__c</fullName>
        <label>Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__YearClosed__c</fullName>
        <label>YearClosed</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>DM Dated User Forecast</label>
    <nameField>
        <label>DM Dated User Forecast  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Dated User Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>